Создает навигацию сайта

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header>
-   <nav>
-    <a href="" lang="en">wed studio</a>
-    <ul>
-        <li><a href="">Студио</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
-    </ul>
-    </nav>
-    <ul>
-       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-       <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
-   </ul>
-
-</header>
+    <header class="header">
+        <a href="" class="logo" lang="en">WebStudio</a>
+        <nav>
+            <ul class="header-menu">
+                <li>
+                    <a href="">Студио</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html">Портфолио</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
+        </ul>
+    </header>
 <main> 
     <section>
         <h1> Эффективные решения для вашего бизнеса</h1>
@@ -109,5 +115,73 @@
 </html>
 
 
+
+<header>
+    <nav>
+        <a href="" lang="en">WebStudio</a>
+        <ul>
+            <li><a href="">Студио</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+        </ul>
+    </nav>
+    <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
+    </ul>
+
+</header class="header">
+<main>
+    <section>
+        <ul class="filters">
+            <li><button type="button" class="filters main-button">Все</button></li>
+            <li><button type="button">Веб-сайты</button></li>
+            <li><button type="button">Приложения</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
+        </ul>
+    </section>
+    <section>
+        <ul>
+            <li>
+                <img src="./images/port1.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port2.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port3.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port4.jpg" alt="" width="370">
+            </li>
+            <li>
+                <img src="./images/port5.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port6.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port7.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port8.jpg" alt="веб сайт" width="370">
+            </li>
+            <li>
+                <img src="./images/port9.jpg" alt="веб сайт" width="370">
+            </li>
+        </ul>
+    </section>
+</main>
+<footer>
+    <a href="" lang="en">wed studio</a>
+    <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
+        </ul>
+    </address>
+</footer>
 
 
