Добавляет кнопки первой секции

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </header class="header">
 <main>
     <section>
-        <ul class="filters">
+        <ul class="filter">
             <li><button type="button" class="filters main-button">Все</button></li>
             <li><button type="button">Веб-сайты</button></li>
             <li><button type="button">Приложения</button></li>
