--- a/portfolio.html
+++ b/portfolio.html
@@ -28,5 +28,17 @@
             <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
         </ul>
     </header>
+    <main>
+            <section>
+                <ul class="filter">
+                    <li><button type="button" class="filters main-button">Все</button></li>
+                    <li><button type="button" class="filter">Веб-сайты</button></li>
+                    <li><button type="button" class="filter">Приложения</button></li>
+                    <li><button type="button" class="filter">Дизайн</button></li>
+                    <li><button type="button" class="filter">Маркетинг</button></li>
+                </ul>
+            </section>
+            <section>
+    </main>
 </body>
 </html>
