Добавляет картинки в секцию вторую

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         </ul>
     </header>
     <main>
-            <section>
+            <section class="list filters">
                 <ul class="filter">
                     <li><button type="button" class="filters main-button">Все</button></li>
                     <li><button type="button" class="filter">Веб-сайты</button></li>
@@ -38,7 +38,38 @@
                     <li><button type="button" class="filter">Маркетинг</button></li>
                 </ul>
             </section>
-            <section>
+            <section class="card">
+                <ul>
+                    <li>
+                        <img src="./images/port1.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port2.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port3.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port4.jpg" alt="" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port5.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port6.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port7.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port8.jpg" alt="веб сайт" width="370">
+                    </li>
+                    <li>
+                        <img src="./images/port9.jpg" alt="веб сайт" width="370">
+                    </li>
+                </ul>
+                </section>
+
     </main>
 </body>
 </html>
