Вносит изменения в список картинок

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,33 +39,33 @@
                 </ul>
             </section>
             <section class="card">
-                <ul>
+                <ul class=""card-list>
                     <li>
                         <img src="./images/port1.jpg" alt="веб сайт" width="370">
                     </li>
                     <li>
-                        <img src="./images/port2.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port2.jpg" alt="дизайн" width="370">
                     </li>
                     <li>
-                        <img src="./images/port3.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port3.jpg" alt="приложение" width="370">
                     </li>
                     <li>
-                        <img src="./images/port4.jpg" alt="" width="370">
+                        <img src="./images/port4.jpg" alt="маркетинг" width="370">
                     </li>
                     <li>
-                        <img src="./images/port5.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port5.jpg" alt="приложение" width="370">
                     </li>
                     <li>
                         <img src="./images/port6.jpg" alt="веб сайт" width="370">
                     </li>
                     <li>
-                        <img src="./images/port7.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port7.jpg" alt="дизайн" width="370">
                     </li>
                     <li>
-                        <img src="./images/port8.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port8.jpg" alt="маркетинг" width="370">
                     </li>
                     <li>
-                        <img src="./images/port9.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port9.jpg" alt="приложение" width="370">
                     </li>
                 </ul>
                 </section>
