Вносить изменение в секцию 2. Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -38,9 +38,9 @@
                     <li><button type="button" class="filter">Маркетинг</button></li>
                 </ul>
             </section>
-            <section class="card">
-                <ul class=""card-list>
-                    <li>
+            <section class="portfolio">
+                <ul class="project">
+                    <li class="projects-list">
                         <img src="./images/port1.jpg" alt="веб сайт" width="370">
                     </li>
                     <li>
