Вносит корректировки с разметку первой и второй секции

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,26 +11,23 @@
     <header class="header">
         <a href="" class="logo" lang="en">WebStudio</a>
         <nav>
-            <ul class="header-menu">
-                <li>
-                    <a href="">Студио</a>
+            <ul class="menu-nav-list">
+                <li><a href="" class="link">Студио</a>
                 </li>
-                <li>
-                    <a href="./portfolio.html">Портфолио</a>
+                <li><a href="./index.html" class="link">Портфолио</a>
                 </li>
-                <li>
-                    <a href="">Контакты</a>
+                <li><a href="" class="link">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
+        <ul class="communication">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
         </ul>
     </header>
     <main>
-            <section class="list filters">
-                <ul class="filter">
+            <section class="filter">
+                <ul class="filters list">
                     <li><button type="button" class="filters main-button">Все</button></li>
                     <li><button type="button" class="filter">Веб-сайты</button></li>
                     <li><button type="button" class="filter">Приложения</button></li>
