Добавляет картинки Squoosh

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     <main>
             <section class="filter">
                 <ul class="filters list">
-                    <li><button type="button" class="filters main-button">Все</button></li>
+                    <li><button type="button" class="filter main-button">Все</button></li>
                     <li><button type="button" class="filter">Веб-сайты</button></li>
                     <li><button type="button" class="filter">Приложения</button></li>
                     <li><button type="button" class="filter">Дизайн</button></li>
@@ -38,31 +38,31 @@
             <section class="portfolio">
                 <ul class="project">
                     <li class="projects-list">
-                        <img src="./images/port1.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port11.jpg" alt="веб сайт" width="370">
                     </li>
                     <li>
-                        <img src="./images/port2.jpg" alt="дизайн" width="370">
+                        <img src="./images/port22.jpg" alt="дизайн" width="370">
                     </li>
                     <li>
-                        <img src="./images/port3.jpg" alt="приложение" width="370">
+                        <img src="./images/port33.jpg" alt="приложение" width="370">
                     </li>
                     <li>
-                        <img src="./images/port4.jpg" alt="маркетинг" width="370">
+                        <img src="./images/port44.jpg" alt="маркетинг" width="370">
                     </li>
                     <li>
-                        <img src="./images/port5.jpg" alt="приложение" width="370">
+                        <img src="./images/port55.jpg" alt="приложение" width="370">
                     </li>
                     <li>
-                        <img src="./images/port6.jpg" alt="веб сайт" width="370">
+                        <img src="./images/port66jpg.jpg" alt="веб сайт" width="370">
                     </li>
                     <li>
-                        <img src="./images/port7.jpg" alt="дизайн" width="370">
+                        <img src="./images/port77jpg.jpg" alt="дизайн" width="370">
                     </li>
                     <li>
-                        <img src="./images/port8.jpg" alt="маркетинг" width="370">
+                        <img src="./images/port88.jpg" alt="маркетинг" width="370">
                     </li>
                     <li>
-                        <img src="./images/port9.jpg" alt="приложение" width="370">
+                        <img src="./images/port99.jpg" alt="приложение" width="370">
                     </li>
                 </ul>
                 </section>
