Добавляет классы для секций и разделов

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,17 +12,17 @@
         <a href="" class="logo" lang="en">WebStudio</a>
         <nav>
             <ul class="menu-nav-list">
-                <li><a href="" class="link">Студио</a>
+                <li><a href="" class="menu-link">Студио</a>
                 </li>
-                <li><a href="./index.html" class="link">Портфолио</a>
+                <li><a href="./index.html" class="lmenu-ink">Портфолио</a>
                 </li>
-                <li><a href="" class="link">Контакты</a>
+                <li><a href="" class="menu-link">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul class="communication">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
+        <ul class="contacts">
+            <li class="contacts-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-list"><a href="tel:+380961111111" class="contacts-list">+38 (096) 111-11-11</a></li>
         </ul>
     </header>
     <main>
@@ -47,7 +47,7 @@
                         <img src="./images/port33.jpg" alt="приложение" width="370">
                     </li>
                     <li>
-                        <img src="./images/port44.jpg" alt="маркетинг" width="370">
+                        <img src="./images/port444.jpg" alt="маркетинг" width="370">
                     </li>
                     <li>
                         <img src="./images/port55.jpg" alt="приложение" width="370">
@@ -68,13 +68,13 @@
                 </section>
 
     </main>
-<footer>
-    <a href="" lang="en">wed studio</a>
+<footer class="contacts"> 
+    <a href="" class="logo" lang="en">wed studio</a>
     <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="contacts-item">г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
+            <li class="contacts-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-list"><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
         </ul>
     </address>
 </footer>
