--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
     </header>
     <main>
             <section class="filter">
+            <h1>Портфолио</h1 hidden>
                 <ul class="filters list">
                     <li><button type="button" class="filter main-button">Все</button></li>
                     <li><button type="button" class="filter">Веб-сайты</button></li>
@@ -39,30 +40,48 @@
                 <ul class="project">
                     <li class="projects-list">
                         <img src="./images/port11.jpg" alt="веб сайт" width="370">
+                        <h2>Технокряк</h2>
+                        <p>Вебсайт</p>
                     </li>
                     <li>
                         <img src="./images/port22.jpg" alt="дизайн" width="370">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/port33.jpg" alt="приложение" width="370">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Приложение</p>
                     </li>
                     <li>
                         <img src="./images/port444.jpg" alt="маркетинг" width="370">
+                        <h2>Проект Prime</h2>
+                        <p>Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/port55.jpg" alt="приложение" width="370">
+                        <h2>Проект Boxes</h2>
+                        <p>Приложение</p>
                     </li>
                     <li>
                         <img src="./images/port66jpg.jpg" alt="веб сайт" width="370">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Вебсайт</p>
                     </li>
                     <li>
                         <img src="./images/port77jpg.jpg" alt="дизайн" width="370">
+                        <h2>Издание Limited Edition</h2>
+                        <p>Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/port88.jpg" alt="маркетинг" width="370">
+                        <h2>Проект LAB</h2>
+                        <p>Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/port99.jpg" alt="приложение" width="370">
+                        <h2>Growing Business</h2>
+                        <p>Приложение</p>
                     </li>
                 </ul>
                 </section>
