Добавляет абзац описания для будущего Hoovera

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,49 +39,77 @@
             <section class="portfolio">
                 <ul class="project">
                     <li class="projects-list">
-                        <img src="./images/port11.jpg" alt="веб сайт" width="370">
+                       <a href="" img src="./images/port11.jpg" alt="веб сайт" width="370">
                         <h2>Технокряк</h2>
                         <p>Вебсайт</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют 
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
+                    </a>
                     </li>
                     <li>
                         <img src="./images/port22.jpg" alt="дизайн" width="370">
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port33.jpg" alt="приложение" width="370">
                         <h2>Ресторан Seafood</h2>
                         <p>Приложение</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port444.jpg" alt="маркетинг" width="370">
                         <h2>Проект Prime</h2>
                         <p>Маркетинг</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port55.jpg" alt="приложение" width="370">
                         <h2>Проект Boxes</h2>
                         <p>Приложение</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port66jpg.jpg" alt="веб сайт" width="370">
                         <h2>Inspiration has no Borders</h2>
                         <p>Вебсайт</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port77jpg.jpg" alt="дизайн" width="370">
                         <h2>Издание Limited Edition</h2>
                         <p>Дизайн</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port88.jpg" alt="маркетинг" width="370">
                         <h2>Проект LAB</h2>
                         <p>Маркетинг</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                     <li>
                         <img src="./images/port99.jpg" alt="приложение" width="370">
                         <h2>Growing Business</h2>
                         <p>Приложение</p>
+                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                            эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
+                        </p>
                     </li>
                 </ul>
                 </section>
