--- a/portfolio.html
+++ b/portfolio.html
@@ -9,130 +9,197 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo" lang="en">WebStudio</a>
+        <a href="" class="logo" lang="en">
+            <span>Web</span>Studio
+        </a>
         <nav>
-            <ul class="menu-nav-list">
-                <li><a href="" class="menu-link">Студио</a>
+            <ul class="nav-menu">
+                <li>
+                    <a href="" class="menu-link">
+                        Студио
+                    </a>
                 </li>
-                <li><a href="./index.html" class="lmenu-ink">Портфолио</a>
+                <li>
+                    <a href="./index.html" class="menu-link active">
+                        Портфолио
+                    </a>
                 </li>
-                <li><a href="" class="menu-link">Контакты</a>
+                <li>
+                    <a href="" class="menu-link">
+                        Контакты
+                    </a>
                 </li>
             </ul>
         </nav>
         <ul class="contacts">
-            <li class="contacts-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts-list"><a href="tel:+380961111111" class="contacts-list">+38 (096) 111-11-11</a></li>
+            <li class="contacts-link">
+                <a class="contacts-list" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="contacts-link">
+                <a class="contacts-list" href="tel:+380961111111">
+                    +38(096)-111-11-11
+                </a>
+            </li>
         </ul>
     </header>
     <main>
-            <section class="filter">
+        <section class="filters">
             <h1>Портфолио</h1 hidden>
-                <ul class="filters list">
-                    <li><button type="button" class="filter main-button">Все</button></li>
-                    <li><button type="button" class="filter">Веб-сайты</button></li>
-                    <li><button type="button" class="filter">Приложения</button></li>
-                    <li><button type="button" class="filter">Дизайн</button></li>
-                    <li><button type="button" class="filter">Маркетинг</button></li>
-                </ul>
-            </section>
-            <section class="portfolio">
-                <ul class="project">
-                    <li class="projects-list">
-                       <a href="" img src="./images/port11.jpg" alt="веб сайт" width="370">
+            <ul class="filters-list">
+                <li>
+                    <button type="button" class="filter-button main-filter-button">
+                        Все
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="filter-button">
+                        Веб-сайты
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="filter-button">
+                        Приложения
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="filter-button">
+                        Дизайн
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="filter-button">
+                        Маркетинг
+                    </button>
+                </li>
+            </ul>
+        </section>
+        <section class="portfolio">
+            <ul class="project-card">
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port11.jpg" alt="веб сайт" width="370" />
                         <h2>Технокряк</h2>
                         <p>Вебсайт</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют 
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют 
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
                     </a>
-                    </li>
-                    <li class="projects-list">
-                        <a href="" img src="./images/port22.jpg" alt="дизайн" width="370">
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port22.jpg" alt="дизайн" width="370" />
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                        
-                    </li>
-                    <li class="projects-list">
-                        <a href="" img src="./images/port33.jpg" alt="приложение" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port33.jpg" alt="приложение" width="370" />
                         <h2>Ресторан Seafood</h2>
                         <p>Приложение</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                    <li class="projects-list">
-                        <a href="" img src="./images/port444.jpg" alt="маркетинг" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port444.jpg" alt="маркетинг" width="370" />
                         <h2>Проект Prime</h2>
                         <p>Маркетинг</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                    <li class="projects-list">
-                        <a href="" img src="./images/port55.jpg" alt="приложение" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port55.jpg" alt="приложение" width="370" />
                         <h2>Проект Boxes</h2>
                         <p>Приложение</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                    <li class="projects-list">
-                        <a href="" img src="./images/port66jpg.jpg" alt="веб сайт" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port66jpg.jpg" alt="веб сайт" width="370" />
                         <h2>Inspiration has no Borders</h2>
                         <p>Вебсайт</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                    <li class="projects-list">
-                       <a hre="" img src="./images/port77jpg.jpg" alt="дизайн" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port77jpg.jpg" alt="дизайн" width="370" />
                         <h2>Издание Limited Edition</h2>
                         <p>Дизайн</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                    <li class="projects-list">
-                       <a href="" img src="./images/port88.jpg" alt="маркетинг" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port88.jpg" alt="маркетинг" width="370" />
                         <h2>Проект LAB</h2>
                         <p>Маркетинг</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                    <li class="projects-list">
-                       <a href="" img src="./images/port99.jpg" alt="приложение" width="370">
+                    </a>
+                </li>
+                <li class="project-card">
+                    <a href="">
+                        <img src="./images/port99.jpg" alt="приложение" width="370" />
                         <h2>Growing Business</h2>
                         <p>Приложение</p>
-                        <p>Технокряк это современная площадка распростронение короновируса. Компании используют
+                        <p>
+                            Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
                         </p>
-                        </a>
-                    </li>
-                </ul>
-                </section>
-
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
-<footer class="contacts"> 
-    <a href="" class="logo" lang="en">wed studio</a>
-    <address>
-        <p class="contacts-item">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-            <li class="contacts-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts-list"><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
-        </ul>
-    </address>
-</footer>
+    <footer class="contacts"> 
+        <a href="" class="logo" lang="en">
+            <span>Web</span>Studio
+        </a>
+        <address>
+            <p class="contacts-item">
+                г. Киев, пр-т Леси Украинки, 26
+            </p>
+            <ul>
+                <li class="contacts-list">
+                    <a href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="contacts-list">
+                    <a href="tel:+380961111111">
+                        +38 (096) 111-11-11
+                    </a>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
