Добавляет ховер и фокус в футер

--- a/portfolio.html
+++ b/portfolio.html
@@ -187,15 +187,15 @@
             <p class="contacts-item">
                 г. Киев, пр-т Леси Украинки, 26
             </p>
-            <ul>
-                <li class="contacts-list">
-                    <a href="mailto:info@devstudio.com">
-                        info@devstudio.com
-                    </a>
-                </li>
-                <li class="contacts-list">
-                    <a href="tel:+380961111111">
-                        +38 (096) 111-11-11
+            <ul class="contacts">
+            <li class="contacts-link">
+                <a class="contacts-list" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
+            </li>
+                <li class="contacts-link">
+                    <a class="contacts-list" href="tel:+380961111111">
+                        +38(096)-111-11-11
                     </a>
                 </li>
             </ul>
