Подключает стили css в логотип, и навигацию

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <a href="" class="logo" lang="en">
-            <span>Web</span>Studio
+            <span class="logo-part">Web</span>Studio
         </a>
         <nav>
             <ul class="nav-menu">
