--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     </section>
 <section> 
-    <h2>Наши особенности</h2 hidden>
+    <h2 hidden>Наши особенности</h2>
     <ul>
     <li>
         <h2>Внимание к деталям</h2>
