Добавляет стили к кнопкам

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
             <span class="logo-part">Web</span>Studio
         </a>
         <nav>
-            <ul class="nav-menu">
+            <ul class="nav-menu list">
                 <li>
                     <a href="" class="menu-link">
                         Студио
@@ -31,7 +31,7 @@
                 </li>
             </ul>
         </nav>
-        <ul class="contacts">
+        <ul class="contacts list">
             <li class="contacts-link">
                 <a class="contacts-list" href="mailto:info@devstudio.com">
                     info@devstudio.com
@@ -45,11 +45,11 @@
         </ul>
     </header>
     <main>
-        <section class="filters">
-            <h1>Портфолио</h1 hidden>
-            <ul class="filters-list">
+        <section class="filters list">
+            <h1 hidden>Портфолио</h1>
+            <ul class="filters-list list">
                 <li>
-                    <button type="button" class="filter-button main-filter-button">
+                    <button type="button" class="main-filter-button">
                         Все
                     </button>
                 </li>
@@ -76,7 +76,7 @@
             </ul>
         </section>
         <section class="portfolio">
-            <ul class="project-card">
+            <ul class="projects list">
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port11.jpg" alt="веб сайт" width="370" />
@@ -181,7 +181,7 @@
     </main>
     <footer class="contacts"> 
         <a href="" class="logo" lang="en">
-            <span>Web</span>Studio
+            <span class="logo-part">Web</span>Studio
         </a>
         <address>
             <p class="contacts-item">
