Добавляет классы (в проекты) и стили к main контейнеру

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,8 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port11.jpg" alt="веб сайт" width="370" />
-                        <h2>Технокряк</h2>
-                        <p>Вебсайт</p>
+                        <h2 class="projects-title">Технокряк</h2>
+                        <p class="projects-text">Вебсайт</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют 
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -91,7 +91,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port22.jpg" alt="дизайн" width="370" />
-                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -102,7 +102,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port33.jpg" alt="приложение" width="370" />
-                        <h2>Ресторан Seafood</h2>
+                        <h2 class="projects-title">Ресторан Seafood</h2>
                         <p>Приложение</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -113,7 +113,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port444.jpg" alt="маркетинг" width="370" />
-                        <h2>Проект Prime</h2>
+                        <h2 class="projects-title">Проект Prime</h2>
                         <p>Маркетинг</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -124,7 +124,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port55.jpg" alt="приложение" width="370" />
-                        <h2>Проект Boxes</h2>
+                        <h2 class="projects-title">Проект Boxes</h2>
                         <p>Приложение</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -135,7 +135,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port66jpg.jpg" alt="веб сайт" width="370" />
-                        <h2>Inspiration has no Borders</h2>
+                        <h2 class="projects-title">Inspiration has no Borders</h2>
                         <p>Вебсайт</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -146,7 +146,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port77jpg.jpg" alt="дизайн" width="370" />
-                        <h2>Издание Limited Edition</h2>
+                        <h2 class="projects-title">Издание Limited Edition</h2>
                         <p>Дизайн</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -157,7 +157,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port88.jpg" alt="маркетинг" width="370" />
-                        <h2>Проект LAB</h2>
+                        <h2 class="projects-title">Проект LAB</h2>
                         <p>Маркетинг</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
@@ -168,7 +168,7 @@
                 <li class="project-card">
                     <a href="">
                         <img src="./images/port99.jpg" alt="приложение" width="370" />
-                        <h2>Growing Business</h2>
+                        <h2 class="projects-title">Growing Business</h2>
                         <p>Приложение</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
