--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                     <a href="">
                         <img src="./images/port11.jpg" alt="веб сайт" width="370" />
                         <h2 class="projects-title">Технокряк</h2>
-                        <p class="projects-text">Вебсайт</p>
+                        <p class="projects-sections">Вебсайт</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют 
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -92,7 +92,7 @@
                     <a href="">
                         <img src="./images/port22.jpg" alt="дизайн" width="370" />
                         <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                        <p class="projects-sections">Дизайн</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -103,7 +103,7 @@
                     <a href="">
                         <img src="./images/port33.jpg" alt="приложение" width="370" />
                         <h2 class="projects-title">Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                        <p class="projects-sections">Приложение</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -114,7 +114,7 @@
                     <a href="">
                         <img src="./images/port444.jpg" alt="маркетинг" width="370" />
                         <h2 class="projects-title">Проект Prime</h2>
-                        <p>Маркетинг</p>
+                        <p class="projects-sections">Маркетинг</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -125,7 +125,7 @@
                     <a href="">
                         <img src="./images/port55.jpg" alt="приложение" width="370" />
                         <h2 class="projects-title">Проект Boxes</h2>
-                        <p>Приложение</p>
+                        <p class="projects-sections">Приложение</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -136,7 +136,7 @@
                     <a href="">
                         <img src="./images/port66jpg.jpg" alt="веб сайт" width="370" />
                         <h2 class="projects-title">Inspiration has no Borders</h2>
-                        <p>Вебсайт</p>
+                        <p class="projects-sections">Вебсайт</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -147,7 +147,7 @@
                     <a href="">
                         <img src="./images/port77jpg.jpg" alt="дизайн" width="370" />
                         <h2 class="projects-title">Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                        <p class="projects-sections">Дизайн</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -158,7 +158,7 @@
                     <a href="">
                         <img src="./images/port88.jpg" alt="маркетинг" width="370" />
                         <h2 class="projects-title">Проект LAB</h2>
-                        <p>Маркетинг</p>
+                        <p class="projects-sections">Маркетинг</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
@@ -169,7 +169,7 @@
                     <a href="">
                         <img src="./images/port99.jpg" alt="приложение" width="370" />
                         <h2 class="projects-title">Growing Business</h2>
-                        <p>Приложение</p>
+                        <p class="projects-sections">Приложение</p>
                         <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
