Добавляет клас и стиль к лого в футере

--- a/portfolio.html
+++ b/portfolio.html
@@ -181,7 +181,7 @@
     </main>
     <footer class="contacts"> 
         <a href="" class="logo" lang="en">
-            <span class="logo-part">Web</span>Studio
+            <span class="logo-part">Web</span><span class="logo-part-one">Studio</span>
         </a>
         <address>
             <p class="contacts-item">
