Добавляет шрифты в main и fotter

--- a/portfolio.html
+++ b/portfolio.html
@@ -191,7 +191,7 @@
                 г. Киев, пр-т Леси Украинки, 26
             </p>
             <ul class="contacts">
-            <li class="contacts-link">
+            <li class="contacts-link-footer">
                 <a class="contacts-list" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
