добавляет спан в логотип

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo" lang="en">WebStudio</a>
+        <a href="" class="logo" lang="en">
+        <span class="logo-part">Web</span>Studio
+        </a>
         <nav>
             <ul class="header-menu">
                 <li>
