--- a/index.html
+++ b/index.html
@@ -15,22 +15,37 @@
         <span class="logo-part">Web</span>Studio
         </a>
         <nav>
-            <ul class="header-menu">
+            <ul class="nav-menu list">
                 <li>
-                    <a href="">Студио</a>
+                    <a href="" class="menu-link active">
+                        Студио
+                    </a>
+                </li>
+
+                <li>
+                    <a href="./portfolio.html" class="menu-link ">
+                        Портфолио
+                    </a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Портфолио</a>
-                </li>
-                <li>
-                    <a href="">Контакты</a>
+                    <a href="" class="menu-link">
+                        Контакты
+                    </a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
-        </ul>
+            <ul class="contacts list">
+                <li class="contacts-link">
+                    <a class="contacts-list" href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="contacts-link">
+                    <a class="contacts-list" href="tel:+380961111111">
+                        +38(096)-111-11-11
+                    </a>
+                </li>
+             </ul>
     </header>
 <main> 
     <section>
@@ -105,14 +120,26 @@
 </ul>
     </section>
     </main>
-<footer>
-    <a href="" lang="en">wed studio</a>
+<footer class="contacts">
+    <a href="" class="logo" lang="en">
+        <span class="logo-part">Web</span><span class="logo-part-one">Studio</span>
+    </a>
     <address>
-    <p>г. Киев, пр-т Леси Украинки, 26</p>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
-    </ul>
+        <p class="contacts-item">
+            г. Киев, пр-т Леси Украинки, 26
+        </p>
+        <ul class="contacts">
+            <li class="contacts-link">
+                <a class="contacts-list" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="contacts-link">
+                <a class="contacts-list" href="tel:+380961111111">
+                    +38(096)-111-11-11
+                </a>
+            </li>
+        </ul>
     </address>
 </footer>
 </body>
