--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
              </ul>
     </header>
 <main> 
-    <section>
-        <h1> Эффективные решения для вашего бизнеса</h1>
+    <section class="main-section">
+        <h1 class="section-title"> Эффективные решения для вашего бизнеса</h1>
        
 <button type="button">Заказать услугу</button>
     
