--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="main-section">
         <h1 class="section-title"> Эффективные решения для вашего бизнеса</h1>
        
-<button type="button">Заказать услугу</button>
+<button type="button" class="order-button">Заказать услугу</button>
     
     </section>
 <section> 
