--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     
 </section>
 
-    <section>
-        <h2>Чем мы занимаемся</h2>
+    <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
             <ul>
         <li>
             <img src="./images/box1.jpg" alt="разработка верстки" width="370">
@@ -94,28 +94,28 @@
         </li>
             </ul>
     </section>
-    <section>
-    <h2>Наша команда</h2>
-<ul>
-    <li>
+    <section class="team">
+    <h2 class="team-title">Наша команда</h2>
+<ul class="team-list">
+    <li class="team-leads">
         <img src="./images/img1.jpg" alt="менеджер" width="270">
-        <h3>Игорь Демьяненко</h3>
-        <p lang="en">Product Designer</p>
+        <h3 class="team-name">Игорь Демьяненко</h3>
+        <p lang="en" class="position">Product Designer</p>
     </li>
-    <li>
+    <li class="team-leads">
         <img src="./images/img2.jpg" alt="разработчик" width="270">
-        <h3>Ольга Репина</h3>
-        <p lang="en">Frontend Developer</p>
+        <h3 class="team-name">Ольга Репина</h3>
+        <p lang="en" class="position">Frontend Developer</p>
     </li>
-    <li>
+    <li class="team-leads">
         <img src="./images/img3.jpg" alt="отдел маркетинга" width="270">
-        <h3>Николай Тарасов</h3>
-        <p lang="en">Marketing</p>
+        <h3 class="team-name">Николай Тарасов</h3>
+        <p lang="en" class="position">Marketing</p>
     </li>
-    <li>
+    <li class="team-leads">
         <img src="./images/img4.jpg" alt="дизайнер" width="270">
-        <h3>Михаил Ермаков</h3>
-        <p lang="en">UI Designer</p>
+        <h3 class="team-name">Михаил Ермаков</h3>
+        <p lang="en"class="position" >UI Designer</p>
     </li>  
 </ul>
     </section>
