--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <a href="" class="logo" lang="en">
-            <span class="logo-part">Web</span>Studio
+        Web<span class="logo-part-one">Studio</span>
         </a>
         <nav>
             <ul class="nav-menu list">
@@ -34,7 +34,7 @@
                 </li>
             </ul>
         </nav>
-        <ul class="contacts list">
+        <ul class="contacts-list">
             <li class="contacts-link">
                 <a class="contacts-list" href="mailto:info@devstudio.com">
                     info@devstudio.com
@@ -77,106 +77,105 @@
                     </button>
                 </li>
             </ul>
-        </section>
-        <section class="portfolio">
-            <ul class="projects list">
+        
+            <ul class="projects-list">
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port11.jpg" alt="веб сайт" width="370" />
                         <h2 class="projects-title">Технокряк</h2>
                         <p class="projects-sections">Вебсайт</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют 
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port22.jpg" alt="дизайн" width="370" />
-                        <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                        <h2 class="projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="projects-sections">Дизайн</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port33.jpg" alt="приложение" width="370" />
                         <h2 class="projects-title">Ресторан Seafood</h2>
                         <p class="projects-sections">Приложение</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port444.jpg" alt="маркетинг" width="370" />
-                        <h2 class="projects-title">Проект Prime</h2>
+                        <h2 class="projects-title">Проект <span lang="en">Prime</span></h2>
                         <p class="projects-sections">Маркетинг</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port55.jpg" alt="приложение" width="370" />
-                        <h2 class="projects-title">Проект Boxes</h2>
+                        <h2 class="projects-title">Проект <span lang="en">Boxes</span></h2>
                         <p class="projects-sections">Приложение</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port66jpg.jpg" alt="веб сайт" width="370" />
-                        <h2 class="projects-title">Inspiration has no Borders</h2>
+                        <h2 class="projects-title" lang="en">Inspiration has no Borders</h2>
                         <p class="projects-sections">Вебсайт</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port77jpg.jpg" alt="дизайн" width="370" />
-                        <h2 class="projects-title">Издание Limited Edition</h2>
+                        <h2 class="projects-title">Издание <span lang="en">Limited Edition</span></h2>
                         <p class="projects-sections">Дизайн</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port88.jpg" alt="маркетинг" width="370" />
-                        <h2 class="projects-title">Проект LAB</h2>
+                        <h2 class="projects-title">Проект <span lang="en">LAB</span></h2>
                         <p class="projects-sections">Маркетинг</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
                 <li class="project-card">
-                    <a href="">
+                    <a href="" class="projects">
                         <img src="./images/port99.jpg" alt="приложение" width="370" />
-                        <h2 class="projects-title">Growing Business</h2>
+                        <h2 class="projects-title" lang="en">Growing Business</h2>
                         <p class="projects-sections">Приложение</p>
-                        <p>
+                        <!-- <p>
                             Технокряк это современная площадка распростронение короновируса. Компании используют
                             эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.
-                        </p>
+                        </p> -->
                     </a>
                 </li>
             </ul>
@@ -184,9 +183,9 @@
     </main>
     <footer class="contacts"> 
         <a href="" class="logo" lang="en">
-            <span class="logo-part">Web</span><span class="logo-part-one">Studio</span>
+            Web<span class="logo-part-secondary">Studio</span>
         </a>
-        <address>
+        <address class="location">
             <p class="contacts-item">
                 г. Киев, пр-т Леси Украинки, 26
             </p>
