--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <a href="" class="logo" lang="en">
-        <span class="logo-part-one">Web</span>Studio
+        Web<span class="logo-part-one">Studio</span>
         </a>
         <nav>
             <ul class="nav-menu list">
