Вносит правки в стили ховер и фокус

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
-    <link 
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header class="header">
         <a href="" class="logo" lang="en">
-        Web<span class="logo-part-one">Studio</span>
+            Web<span class="logo-part-one">Studio</span>
         </a>
         <nav>
             <ul class="nav-menu list">
@@ -77,7 +78,7 @@
                     </button>
                 </li>
             </ul>
-        
+
             <ul class="projects-list">
                 <li class="project-card">
                     <a href="" class="projects">
@@ -181,7 +182,7 @@
             </ul>
         </section>
     </main>
-    <footer class="contacts"> 
+    <footer class="contacts">
         <a href="" class="logo" lang="en">
             Web<span class="logo-part-secondary">Studio</span>
         </a>
@@ -190,11 +191,11 @@
                 г. Киев, пр-т Леси Украинки, 26
             </p>
             <ul class="contacts">
-            <li class="contacts-link">
-                <a class="contacts-list" href="mailto:info@devstudio.com">
-                    info@devstudio.com
-                </a>
-            </li>
+                <li class="contacts-link">
+                    <a class="contacts-list" href="mailto:info@devstudio.com">
+                        info@devstudio.com
+                    </a>
+                </li>
                 <li class="contacts-link">
                     <a class="contacts-list" href="tel:+380961111111">
                         +38(096)-111-11-11
@@ -204,4 +205,5 @@
         </address>
     </footer>
 </body>
+
 </html>
